force-app/main/default/objects/Case/fields/Disease__c.field-meta.xml
<CustomField>
    <fullName>Disease__c</fullName>
    <label>Disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COVID19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>