force-app/main/default/objects/Case/fields/Eligibility_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Overridden</label>
    <type>Checkbox</type>
</CustomField>