force-app/main/default/objects/Case/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <label>Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Eligible</fullName>
                <default>true</default>
                <label>Not Eligible</label>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>