force-app/main/default/objects/Case/fields/Eligibility_Vaccine_Group__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Vaccine_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Vaccine Group</label>
    <referenceTo>Eligibility_Vaccine_Group__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>