force-app/main/default/objects/Case/fields/Site_Category__c.field-meta.xml
<CustomField>
    <fullName>Site_Category__c</fullName>
    <label>Booking Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Site_Category</valueSetName>
    </valueSet>
</CustomField>